# paperless-ngx-dedupe

./: .codacy.yaml  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .release-please-config.json  .secrets.baseline  .snyk  .trivyignore  .yamllint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER_COMPOSE_GUIDE.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  SECURITY.md  add-correspondent.sh  add-tags.sh  alembic.ini  compose.dev.yml  compose.yml  dev.py  docker-compose.dev.yml  docker-compose.postgres.yml  docker-compose.yml  docker-entrypoint.sh  env_sample  eslint.config.js  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  (+15 more)
.codacy/: codacy.config.json  configure-codacy-summary.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/actions/setup-node-pnpm/: action.yml
.github/integration/: docker-compose.yml
.github/workflows/: auto-release.yml  ci.yml  claude-code-review.yml  claude.yml  cleanup-draft-releases.yml  codacy.yml  codeql.yml  docker-publish.yml  docker-security.yml  integration.yml  issue-triage.yml  publish.yml  release-please.yml  release.yml  scorecard.yml  snyk-security.yml  snyk.yml  trigger-docs-sync.yml  trivy.yml
alembic/: env.py
alembic/versions/: 1d3f8c7b9a12_add_batch_operations_and_indexes.py  3e36f7456b6e_initial_schema.py  5d8c1e4b2a31_add_ai_result_review_fields.py  84daede32136_add_performance_indexes_for_large_.py  add_postgresql_optimizations.py  b2c4f6f9c2a1_add_ai_processing_tables.py  cf393bce516c_initial_schema_with_component_scores.py  f7fafab8ba69_initial_migration.py  timezone_aware_datetime_fields.py
docs/: .meta.yml  404.md  ai-processing.md  api-reference.md  architecture.md  changelog.md  cli-reference.md  configuration.md  contributing.md  database-backup-and-restore.md  development.md  document-qa.md  getting-started.md  how-it-works.md  index.md  installation.md  observability.md  paperless-3-compatibility.md  robots.txt  sdk-reference.md  tags.md  troubleshooting.md  upgrading.md  user-guide.md
docs/includes/: abbreviations.md
docs/javascripts/: extra.js  mathjax.js  seo.js
docs/overrides/: main.html
docs/stylesheets/: extra.css
docs/superpowers/plans/: 2026-04-04-adaptive-tpm-throttle.md  2026-04-04-ai-apply-failure-visibility.md  2026-04-04-observability-improvements.md  2026-04-04-remove-anthropic-add-flex-processing.md  2026-04-05-tag-alias-mapping.md
docs/superpowers/specs/: 2026-04-04-adaptive-tpm-throttle-design.md  2026-04-04-ai-apply-failure-visibility-design.md  2026-04-04-observability-improvements-design.md  2026-04-04-remove-anthropic-add-flex-processing-design.md  2026-04-05-tag-alias-mapping-design.md
evals/openai/: README.md  developer-message.txt  document-classification-dataset.jsonl  structured-output-schema.json  user-message.txt
frontend/: eslint.config.js  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.docker.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: index.ts
frontend/src/components/batch/: BulkActions.tsx  OperationProgress.tsx  OperationsList.tsx  index.ts
frontend/src/components/dashboard/: SystemHealthCard.tsx
frontend/src/components/duplicates/: DocumentComparisonModal.tsx  SimilarityIndicator.tsx
frontend/src/components/forms/: ConfigPanel.tsx  index.ts
frontend/src/components/layout/: Layout.tsx
frontend/src/components/observability/: ErrorBoundary.tsx
frontend/src/components/shared/: DocumentList.tsx  DuplicateGroupCard.tsx  KeyboardShortcutsHelp.tsx  ProgressTracker.tsx  index.ts
frontend/src/components/sync/: SyncProgress.tsx
frontend/src/components/ui/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  Checkbox.tsx  Dialog.tsx  Input.tsx  Label.tsx  Progress.tsx  ScrollArea.tsx  Tabs.tsx  Tooltip.tsx  index.ts
frontend/src/hooks/: index.ts  redux.ts  useKeyboardShortcuts.ts
frontend/src/observability/: faro.ts  userActions.ts
frontend/src/pages/: index.ts
frontend/src/pages/ai/: AIProcessingPage.tsx  index.ts
frontend/src/pages/bulk/: BulkWizardPage.tsx  index.ts
frontend/src/pages/dashboard/: DashboardPage.tsx
frontend/src/pages/documents/: DocumentSummaryPage.tsx  DocumentsPage.tsx  index.ts
frontend/src/pages/duplicates/: DuplicatesPage.tsx  index.ts
frontend/src/pages/processing/: ProcessingPage.tsx  index.ts
frontend/src/pages/settings/: SettingsPage.tsx
frontend/src/services/: index.ts
frontend/src/services/api/: ai.ts  batch.ts  client.ts  config.ts  documents.ts  duplicates.ts  generated.ts  index.ts  processing.ts  types.ts
frontend/src/services/websocket/: client.ts  index.ts
frontend/src/store/: index.ts  store.ts
frontend/src/store/slices/: configSlice.ts  documentsSlice.ts  duplicatesSlice.ts  index.ts  processingSlice.ts
redis_data/: dump.rdb
redis_data/appendonlydir/: appendonly.aof.1.base.rdb  appendonly.aof.1.incr.aof
scripts/: dev.sh  generate-openapi-types.sh  setup-dev.sh  test.sh
src/paperless_dedupe/: __init__.py  main.py
src/paperless_dedupe/api/v1/: __init__.py  ai_processing.py  batch.py  batch_operations.py  config.py  documents.py  duplicates.py  health.py  internal.py  processing.py  websocket.py
src/paperless_dedupe/core/: config.py  config_utils.py  task_status.py
src/paperless_dedupe/models/: database.py
src/paperless_dedupe/observability/: __init__.py  retry_metrics.py  tracing.py
src/paperless_dedupe/services/: ai_processing_service.py  cache_service.py  deduplication_service.py  paperless_client.py
src/paperless_dedupe/utils/: pagination.py  retry.py
src/paperless_dedupe/worker/: __init__.py  celery_app.py  database.py  utils.py
tests/: conftest.py
tests/benchmarks/: test_performance.py
tests/fixtures/: document_fixtures.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_deduplication_service.py  test_document_sync_utils.py  test_task_status.py  test_tracing.py
(+4 files in other folders)
